// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mixin throws expected error on invalid base 1`] = `
"provided invalid type for argument 1 of [Function: mixin]:
{
  allowed: [
    [Function: Function]
  ],
  provided: 'this-is;not/a~valid_class'
}"
`;

exports[`mixin throws expected error on invalid base and transformer 1`] = `
"provided invalid type for argument 1 of [Function: mixin]:
{
  allowed: [
    [Function: Function]
  ],
  provided: 'this-is;not/a~valid_class'
}"
`;

exports[`mixin throws expected error on invalid base and valid function transformer 1`] = `
"provided invalid type for argument 1 of [Function: mixin]:
{
  allowed: [
    [Function: Function]
  ],
  provided: 'this-is;not/a~valid_class'
}"
`;

exports[`mixin throws expected error on invalid transformer 1`] = `
"provided invalid type for argument 2 of [Function: mixin]:
{
  allowed: [
    [Function: Function],
    null,
    undefined
  ],
  provided: 'this-is;not/a~valid_transformer'
}"
`;

exports[`mixin throws expected error on invalid transformer result 1`] = `
"provided invalid type for result of calling [Function]:
{
  allowed: [
    [Function: Array]
  ],
  provided: null
}"
`;

exports[`superclass throws expected error on invalid base 1`] = `
"provided invalid type for argument 1 of [Function: superclass]:
{
  allowed: [
    [Function: Function]
  ],
  provided: 'this-is;not/a~valid_class'
}"
`;
